--- a/QtCalculator/Calculator.ui
+++ b/QtCalculator/Calculator.ui
@@ -6,13 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>740</width>
+    <width>730</width>
     <height>800</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>740</width>
+    <width>730</width>
     <height>800</height>
    </size>
   </property>
@@ -32,6 +32,7 @@
 
 * {
     color: white;
+    background-color: transparent;
 }
 
 QMainWindow {
@@ -66,13 +67,17 @@ QPushButton[flat=true]:pressed, QPushButton[flat=true]#minimizeButton:pressed {
 QPushButton[flat=true]#closeButton:pressed {
     background-color: #c00000;
 }
-</string>
+/*
+QLineEdit {
+    border-style: none;
+}
+*/</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QPushButton" name="closeButton">
     <property name="geometry">
      <rect>
-      <x>670</x>
+      <x>660</x>
       <y>20</y>
       <width>40</width>
       <height>40</height>
@@ -97,7 +102,7 @@ QPushButton[flat=true]#closeButton:pressed {
    <widget class="QPushButton" name="minimizeButton">
     <property name="geometry">
      <rect>
-      <x>620</x>
+      <x>610</x>
       <y>20</y>
       <width>40</width>
       <height>40</height>
@@ -140,31 +145,6 @@ QPushButton[flat=true]#closeButton:pressed {
      <string>Calculator</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>80</y>
-      <width>551</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe UI</family>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
-    </property>
-    <property name="text">
-     <string>N/A</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-   </widget>
    <widget class="QPushButton" name="actionClearButton">
     <property name="geometry">
      <rect>
@@ -176,7 +156,7 @@ QPushButton[flat=true]#closeButton:pressed {
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
+      <family>Segoe UI Light</family>
       <pointsize>16</pointsize>
      </font>
     </property>
@@ -242,7 +222,7 @@ QPushButton[flat=true]#closeButton:pressed {
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
+      <family>Segoe UI Light</family>
       <pointsize>16</pointsize>
      </font>
     </property>
@@ -330,7 +310,7 @@ QPushButton[flat=true]#closeButton:pressed {
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
+      <family>Segoe UI Light</family>
       <pointsize>16</pointsize>
      </font>
     </property>
@@ -352,7 +332,7 @@ QPushButton[flat=true]#closeButton:pressed {
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
+      <family>Segoe UI Light</family>
       <pointsize>16</pointsize>
      </font>
     </property>
@@ -462,7 +442,7 @@ QPushButton[flat=true]#closeButton:pressed {
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
+      <family>Segoe UI Light</family>
       <pointsize>16</pointsize>
      </font>
     </property>
@@ -484,7 +464,7 @@ QPushButton[flat=true]#closeButton:pressed {
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
+      <family>Segoe UI Light</family>
       <pointsize>16</pointsize>
      </font>
     </property>
@@ -550,7 +530,7 @@ QPushButton[flat=true]#closeButton:pressed {
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
+      <family>Segoe UI Light</family>
       <pointsize>16</pointsize>
      </font>
     </property>
@@ -572,7 +552,7 @@ QPushButton[flat=true]#closeButton:pressed {
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
+      <family>Segoe UI Light</family>
       <pointsize>16</pointsize>
      </font>
     </property>
@@ -594,7 +574,7 @@ QPushButton[flat=true]#closeButton:pressed {
     </property>
     <property name="font">
      <font>
-      <family>Segoe UI</family>
+      <family>Segoe UI Light</family>
       <pointsize>16</pointsize>
      </font>
     </property>
@@ -603,6 +583,71 @@ QPushButton[flat=true]#closeButton:pressed {
     </property>
     <property name="flat">
      <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="expressionLineEdit">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>100</y>
+      <width>660</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Consolas</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Empty Expression LineEdit</string>
+    </property>
+    <property name="frame">
+     <bool>false</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="resultLabel">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>140</y>
+      <width>660</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>26</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Empty Result Label</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>280</y>
+      <width>660</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+     </font>
+    </property>
+    <property name="text">
+     <string>Calculator vx.x. Copyright (C) 2019 Yang Hanlin.</string>
     </property>
    </widget>
   </widget>
