--- a/QtCalculator/Calculator.ui
+++ b/QtCalculator/Calculator.ui
@@ -436,7 +436,7 @@ QLineEdit {
      <rect>
       <x>30</x>
       <y>330</y>
-      <width>160</width>
+      <width>92</width>
       <height>80</height>
      </rect>
     </property>
@@ -456,9 +456,9 @@ QLineEdit {
    <widget class="QPushButton" name="opOrButton">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>132</x>
       <y>330</y>
-      <width>160</width>
+      <width>92</width>
       <height>80</height>
      </rect>
     </property>
@@ -522,9 +522,9 @@ QLineEdit {
    <widget class="QPushButton" name="opNotButton">
     <property name="geometry">
      <rect>
-      <x>370</x>
+      <x>234</x>
       <y>330</y>
-      <width>160</width>
+      <width>92</width>
       <height>80</height>
      </rect>
     </property>
@@ -648,6 +648,50 @@ QLineEdit {
     </property>
     <property name="text">
      <string>Message N/A</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="opNotButton_2">
+    <property name="geometry">
+     <rect>
+      <x>336</x>
+      <y>330</y>
+      <width>92</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Light</family>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>(</string>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="opNotButton_3">
+    <property name="geometry">
+     <rect>
+      <x>438</x>
+      <y>330</y>
+      <width>92</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Light</family>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>)</string>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
