--- a/QtCalculator/Calculator.ui
+++ b/QtCalculator/Calculator.ui
@@ -129,7 +129,7 @@ QLineEdit {
      <rect>
       <x>30</x>
       <y>20</y>
-      <width>120</width>
+      <width>570</width>
       <height>40</height>
      </rect>
     </property>
@@ -142,7 +142,7 @@ QLineEdit {
      </font>
     </property>
     <property name="text">
-     <string>Calculator</string>
+     <string>Loading...</string>
     </property>
    </widget>
    <widget class="QPushButton" name="actionClearButton">
